Parlons Node 0.2.60: a failed admin RPC start is fatal for every Throwable (a JRE without jdk.httpserver throws NoClassDefFoundError, not an Exception - the node ran on headless)
Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01MBSKh2v36bv57U7DbdzXuz